# TiWidget

./: .gitignore  CMakeLists.txt  README.md  launch.json  main.cpp
build_intellisense/: CMakeCache.txt
docs/: DEBUG_FLOW_BREAKPOINTS.md
scripts/: ai_analysis.ps1  analyze_code.ps1  analyze_logs.ps1  auto_build_and_check.ps1  check_crash_reporter.ps1  check_intellisense.ps1  check_resources.ps1  launch_app.ps1  launch_pws.ps1  performance_regression.ps1  run_event_automation.ps1  test_edge_cases.ps1  transfer_and_debug.ps1  visual_validation.ps1
widgetsBase/: CMakeLists.txt  README.md  core_types.h  dock_drag.h  dock_framework.cpp  dock_framework.h  dock_framework_sandbox.cpp  dock_layout.h  dock_layout_constraints_demo.cpp  dock_renderer.cpp  dock_renderer.h  dock_splitter.cpp  dock_splitter.h  dock_theme.h  dock_widget_impl.h  dx12_canvas.cpp  dx12_canvas.h  dx12_demo.cpp  dx12_dock_widget.h  icon_module.h  interactive_demo.cpp  platform_agnostic_demo.cpp  simple_demo.cpp  window_manager.cpp  window_manager.h
widgetsBase/icons/: IconsFontAwesome6.h
